# rwal

./: Cargo.toml  LICENSE  index.html  preview.html
flag.rs/: Cargo.toml
flag.rs/src/: flag.rs
src/: config.rs  dirs.rs  div.html  main.rs  preview.html  rwal.rs
src/backends/: colorthief.rs  colorz.rs  mod.rs
