[package]
name = "rwal"
version = "0.1.0"
edition = "2024"

[dependencies]
flag = { path = "./flag.rs" }

image = "0.25.8"
tiff = { version = "0.6.0-alpha" }

kmeans_colors = "0.7.0"
palette = "0.7.6"
dirs = "6.0.0"

color-thief = "0.2.2"

serde = { version = "1.0.219", features = ["derive"] }
toml = "0.9.5"
log = "0.4.28"
pretty_env_logger = "0.5.0"
rand = "0.9.2"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
incremental = false
